<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/create_post_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/create_post_title"
        android:textColor="#80000000"
        android:textSize="16sp" />

    <View
        android:id="@+id/create_post_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="#80000000"
        app:layout_constraintTop_toBottomOf="@id/create_post_title" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical|end"
        android:text="@string/title_label"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/create_post_border" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:maxLength="255"
        android:dropDownHeight="195dp"
        android:gravity="center"
        android:hint="@string/create_post_hint"
        android:textColorHint="#4000"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/title_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_post_border" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"

        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toBottomOf="@id/edit_title" />

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:background="@drawable/filled_border"
        android:gravity="center"
        android:text="@string/cancel_button_title"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/edit_title" />

    <TextView
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:background="@drawable/filled_border"
        android:gravity="center"
        android:text="@string/confirm_button_title"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_title" />

</android.support.constraint.ConstraintLayout>